# app/Http/Controllers/JustificadosController.php
@@ -5,10 +5,33 @@ use App\Http\Resources\UsersCollection;
 
 use Illuminate\Http\Request;
 use App\Models\justificados;
+use Exception;
+use Illuminate\Support\Facades\Hash;
+use Illuminate\Support\Facades\Validator;
+use Illuminate\Validation\Rule;
 
 class JustificadosController extends Controller
 {
-       /**
+        /**
+     * validate data of request
+     * @param  [Request] $request data
+     * @param  [String] $id_asistencia number id_asistencia
+     * @return [Function]  function validator
+     */
+    private function validation ($request, $id_asistencia) {
+        if ($id_asistencia !== null) {
+            $unique = Rule::unique('justificados')->ignore($request->id_asistencia, 'id_asistencia');
+        } else {
+            $unique = 'unique:justificados';
+        }
+        $validator = Validator::make($request->all(), [
+            'fecha' => 'required',
+            'tipo' => 'required',
+            'id_asistencia' => ['required', $unique]
+        ]);
+        return $validator;
+    }
+    /**
         * @OA\Get(
         *   path="/justificados",
         *   summary="Lists available justificados",
@@ -24,17 +47,17 @@ class JustificadosController extends Controller
         *           title="Paginate",
         *           example="true",
         *           type="boolean",
-        *           description="The unique identifier of a User resource"
+        *           description="The unique identifier of a justificados resource"
         *       )
         *   ),
         *   @OA\Parameter(
         *       name="dataSearch",
         *       in="query",
-        *       description="User resource name",
+        *       description="justificados resource name",
         *       required=false,
         *       @OA\Schema(
         *           type="string",
-        *           description="The unique identifier of a User resource"
+        *           description="The unique identifier of a justificados resource"
         *       )
         *    ),
         *   @OA\Parameter(
@@ -46,7 +69,7 @@ class JustificadosController extends Controller
         *           title="name",
         *           type="string",
         *           example="name",
-        *           description="The unique identifier of a User resource"
+        *           description="The unique identifier of a justificados resource"
         *       )
         *    ),
         *   @OA\Parameter(
@@ -57,7 +80,7 @@ class JustificadosController extends Controller
         *           title="sortOrder",
         *           example="asc",
         *           type="string",
-        *           description="The unique identifier of a User resource"
+        *           description="The unique identifier of a justificados resource"
         *       )
         *    ),
         *   @OA\Parameter(
@@ -90,7 +113,7 @@ class JustificadosController extends Controller
         *           type="integer",
         *           format="int32"
         *       ),
-        *       description="calls per hour allowed by the user"
+        *       description="calls per hour allowed by the justificados"
         *     ),
         *   ),
         *   @OA\Response(
@@ -113,54 +136,183 @@ class JustificadosController extends Controller
 
         $q = justificados::select();
         $justificados = justificados::search($request->toArray(), $q);
-        return  new usersCollection($justificados);
-
-
-
+        return  new UsersCollection($justificados);
     }
-
     /**
+        * @OA\Post(
+        *   path="/justificados",
+        *   summary="Creates a new justificados",
+        *   description="Creates a new justificados",
+        *   tags={"justificados"},
+        *   security={{"passport": {"*"}}},
+        *   @OA\RequestBody(
+        *       @OA\MediaType(
+        *           mediaType="application/json",
+        *           @OA\Schema(ref="#/components/schemas/justificados")
+        *       )
+        *   ),
+        *   @OA\Response(
+        *       @OA\MediaType(mediaType="application/json"),
+        *       response=200,
+        *       description="The justificados resource created",
+        *   ),
+        *   @OA\Response(
+        *       @OA\MediaType(mediaType="application/json"),
+        *       response=401,
+        *       description="Unauthenticated."
+        *   ),
+        *   @OA\Response(
+        *       @OA\MediaType(mediaType="application/json"),
+        *       response="default",
+        *       description="an ""unexpected"" error",
+        *   )
+        * )
+        *
      * Store a newly created resource in storage.
      *
      * @param  \Illuminate\Http\Request  $request
+     * 
      * @return \Illuminate\Http\Response
      */
     public function store(Request $request)
     {
-        //
+        try {
+            if ($this->validation($request, null)->fails()) {
+                $errors = $this->validation($request, null)->errors();
+                return response()->json($errors->all(), 201);
+            } else {
+                $justificados= new justificados();
+                $justificados->id_asistencia = $request->id_asistencia;
+                $justificados->fecha = $request->fecha;
+                $justificados->tipo = $request->tipo;
+                $justificados->save();
+                return response()->json($request, 200);      
+            }
+        }catch (Exception $e) {
+            return response()->json($e);
+        }
     }
 
     /**
-     * Display the specified resource.
-     *
-     * @param  int  $id
-     * @return \Illuminate\Http\Response
-     */
-    public function show($id)
+        * @OA\Get(
+        *   path="/justificados/{id_asistencia}",
+        *   summary="Gets a justificados resource",
+        *   description="Gets a justificados resource",
+        *   tags={"justificados"},
+        *   security={{"passport": {"*"}}},
+        *   @OA\Parameter(
+        *   name="id_asistencia",
+        *   in="path",
+        *   description="The justificados resource id_asistencia",
+        *   required=true,
+        *   @OA\Schema(
+        *       type="string",
+        *       description="The unique identifier of a justificados resource"
+        *   )
+        *   ),
+        *   @OA\Response(
+        *   @OA\MediaType(mediaType="application/json"),
+        *   response=204,
+        *   description="The resource has been deleted"
+        *   ),
+        *   @OA\Response(
+        *   @OA\MediaType(mediaType="application/json"),
+        *   response=401,
+        *   description="Unauthenticated."
+        *   ),
+        *   @OA\Response(
+        *   @OA\MediaType(mediaType="application/json"),
+        *   response="default",
+        *   description="an ""unexpected"" error"
+        *   )
+        * )
+        *
+        * Remove the specified resource from storage.
+        *
+        * @param  int  $id_asistencia
+        *
+        * @return \Illuminate\Http\Response
+        */
+    public function show($id_asistencia)
     {
-        //
+       /** esto es una consulta por la cedula */
+       $justificados = justificados::where('id_asistencia', $id_asistencia)
+            ->where('id_asistencia', $id_asistencia)
+            ->first();
+        if ($justificados)
+        {
+            return response()->json($justificados, 200);
+        } 
+        else 
+        {
+            return response()->json(['status' => 'error', 'message' => 'Estudiante no inscrito'], 204);
+        }
     }
 
-    /**
-     * Update the specified resource in storage.
-     *
-     * @param  \Illuminate\Http\Request  $request
-     * @param  int  $id
-     * @return \Illuminate\Http\Response
-     */
-    public function update(Request $request, $id)
-    {
-        //
-    }
-
-    /**
-     * Remove the specified resource from storage.
-     *
-     * @param  int  $id
-     * @return \Illuminate\Http\Response
-     */
-    public function destroy($id)
-    {
-        //
-    }
+   /**
+        * @OA\Put(
+        *   path="/justificados/{id_asistencia}",
+        *   summary="Updates a justificados resource",
+        *   description="Updates a justificados resource by the id_asistencia",
+        *   tags={"justificados"},
+        *   security={{"passport": {"*"}}},
+        *   @OA\Parameter(
+        *   name="id_asistencia",
+        *   in="path",
+        *   description="justificados resource id",
+        *   required=true,
+        *   @OA\Schema(
+        *       type="string",
+        *       description="The unique identifier of a justificados resource"
+        *   )
+        *   ),
+        *   @OA\RequestBody(
+        *       @OA\MediaType(
+        *           mediaType="application/json",
+        *           @OA\Schema(ref="#/components/schemas/justificados")
+        *       )
+        *   ),
+        *   @OA\Response(
+        *       @OA\MediaType(mediaType="application/json"),
+        *           response=200,
+        *           description="The justificados resource updated"
+        *       ),
+        *       @OA\Response(
+        *           @OA\MediaType(mediaType="application/json"),
+        *           response=401,
+        *           description="Unauthenticated."
+        *       ),
+        *       @OA\Response(
+        *           @OA\MediaType(mediaType="application/json"),
+        *           response="default",
+        *           description="an ""unexpected"" error"
+        *       )
+        *   )
+        *
+        * Update the specified resource in storage.
+        *
+        * @param \Illuminate\Http\Request $request
+        * @param  int  $id_asistencia
+        *
+        * @return \Illuminate\Http\Response
+        */
+        public function update(Request $request, $id_asistencia)
+        {
+            try {
+                if ($this->validation($request, $id_asistencia)->fails()) {
+                    $errors = $this->validation($request, $id_asistencia)->errors();
+                    return response()->json($errors->all(), 201);
+                } else {
+                    $justificados = justificados::where('id_asistencia', $id_asistencia)
+                    ->update([
+                        'fecha' =>  $request->fecha,
+                        'tipo' =>  $request->tipo,
+                        'id_asistencia' =>  $request->id_asistencia,
+                    ]);
+                    return response()->json($justificados, 201);
+                }
+            } catch (Exception $e) {
+                return response()->json($e);
+            }
+        }
 }
